--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"@types/react": "^17.0.0",
 		"@types/react-dom": "^17.0.0",
 		"add": "^2.0.6",
+		"classnames": "^2.3.1",
 		"firebase": "^8.6.8",
 		"node-sass": "^5.0.0",
 		"react": "^17.0.2",
@@ -26,7 +27,8 @@
 		"start": "react-scripts start",
 		"build": "react-scripts build",
 		"test": "react-scripts test",
-		"eject": "react-scripts eject"
+		"eject": "react-scripts eject",
+		"fb:deploy": "yarn build && firebase deploy"
 	},
 	"eslintConfig": {
 		"extends": [
